# script-plennus

./: .gitignore  README.md  padrao.ods  plennus  plennus.py  pyproject.toml
