[project]
name = "script-plennus"
version = "0.1.0"
description = "Script para automação de planilhas plennus"
authors = [
    {name = "renansimeone",email = "renansimeone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "ezodf (>=0.3.2,<0.4.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
